lam lai trang them, cap nhat san pham ajax